<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

    <EditText
        android:id="@+id/host_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:background="#ffffff"
        android:hint="@string/host_hint"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="#000000"
        android:textColorHint="#808080" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/port_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:background="#ffffff"
        android:inputType="number"
        android:maxLines="1"
        android:text="@string/port_text"
        android:textColor="#000000"
        android:textColorHint="#000000" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:text="@string/scan_button_text" />

    <EditText
        android:id="@+id/results_box"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5sp"
        android:background="#ffffff"
        android:hint="@string/results_hint"
        android:inputType="textMultiLine"
        android:maxLines="500"
        android:scrollHorizontally="true"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarSize="15sp"
        android:scrollbars="horizontal|vertical"
        android:textColor="#000000" android:freezesText="true"/>

</LinearLayout>